--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     min-height: 100vh;
-    background-image: url(/src/images/bg-repeat.jpg);
+    background-image: url(../images/bg-repeat.jpg);
     background-size: contain;
 }
 
